@startuml

hide circle
skinparam linetype ortho

entity icon {
    * uuid: UUID
    --
    * name: VARCHAR
    * bytes : BYTEA
    * created : BIGINT
    * modified: BIGINT
}

entity category {
    * uuid : UUID
    --
    * name : VARCHAR
    * type : VARCHAR
    * created : BIGINT
    * modified : BIGINT
    comment : VARCHAR
    icon_uuid : UUID <<FK>>
}

entity currency {
    * uuid: UUID
    --
    * symbol : VARCHAR
    * description : VARCHAR
    * format_symbol : VARCHAR
    * format_symbol_pos : INT
    * show_format_symbol : BOOLEAN
    * def : BOOLEAN
    * rate : DECIMAL(15, 6)
    * rate_direction : INT
    * use_th_separator : BOOLEAN
    * created : BIGINT
    * modified : BIGINT
}

entity contact {
    * uuid: UUID
    --
    * name : VARCHAR
    * type : VARCHAR
    * phone : VARCHAR
    * mobile : VARCHAR
    * email : VARCHAR
    * web : VARCHAR
    * comment : VARCHAR
    * street : VARCHAR
    * city : VARCHAR
    * country : VARCHAR
    * zip : VARCHAR
    * created : BIGINT
    * modified : BIGINT
    icon_uuid : UUID <<FK>>
}

entity account {
    * uuid : UUID
    --
    * name : VARCHAR
    * comment : VARCHAR
    * number : VARCHAR
    * opening : DECIMAL(15,6)
    * account_limit : DECIMAL(15,6)
    * rate : DECIMAL(15,6)
    * type : VARCHAR
    * category_uuid : UUID
    * enabled : BOOLEAN
    * interest : DECIMAL(15,6)
    * card_type : VARCHAR
    * card_number : VARCHAR
    * total : DECIMAL(15,6)
    * total_waiting : DECIMAL(15,6)
    * created : BIGINT
    * modified : BIGINT
    currency_uuid : UUID <<FK>>
    security_uuid : UUID <<FK>>
    closing_date : BIGINT
    icon_uuid : UUID <<FK>>
}

entity transaction {
    * uuid : UUID
    --
    * amount : DECIMAL(15, 6)
    * date_day : INT
    * date_month : INT
    * date_year : INT
    * type : VARCHAR
    * comment : VARCHAR
    * checked : BOOLEAN
    * acc_debited_uuid : UUID <<FK>>
    * acc_credited_uuid : UUID <<FK>>
    * acc_debited_type : VARCHAR
    * acc_credited_type : VARCHAR
    * acc_debited_category_uuid  : UUID <<FK>>
    * acc_credited_category_uuid : UUID <<FK>>
    * rate : DECIMAL(15, 6)
    * rate_direction : INT
    * invoice_number : VARCHAR
    * detailed : BOOLEAN
    * statement_date : BIGINT
    * created : BIGINT
    * modified : BIGINT
    contact_uuid : UUID <<FK>>
    parent_uuid : UUID <<FK>>
}

entity exchange_security {
    * uuid : UUID
    --
    * sec_id : VARCHAR
    * name : VARCHAR
    * short_name : VARCHAR
    * isin : VARCHAR
    * reg_number : VARCHAR
    * face_value : DECIMAL(15, 6)
    * issue_date : DATE
    mat_date : DATE
    days_to_redemption : INT
    * group_type : VARCHAR
    * group_name : VARCHAR
    * type : VARCHAR
    * type_name : VARCHAR
    * market_value : DECIMAL(15, 6)
    coupon_value : DECIMAL(15, 6)
    coupon_percent : DECIMAL(15, 6)
    coupon_date : DATE
    coupon_frequency : INT
    accrued_interest : DECIMAL(15, 6)
    coupon_period : INT
    * created : BIGINT
    * modified : BIGINT
}

entity exchange_security_split {
    * uuid
    --
    * security_uuid : UUID <<FK>>
    * split_type : VARCHAR
    * split_date : DATE
    * rate : DECIMAL(15, 6)
    * comment : VARCHAR
    * created : BIGINT
    * modified : BIGINT
}

entity investment_deal {
    * uuid : UUID
    --
    * account_uuid : UUID <<FK>>
    security_uuid : UUID <<FK>>
    currency_uuid : UUID <<FK>>
    * deal_number : VARCHAR
    * deal_date : TIMESTAMP
    * accounting_date : TIMESTAMP
    * market_type : VARCHAR
    * operation_type : VARCHAR
    * security_amount : INT
    * price : DECIMAL(15, 6)
    * aci : DECIMAL(15, 6)
    * deal_volume : DECIMAL(15, 6)
    * rate : DECIMAL(15, 6)
    * exchange_fee : DECIMAL(15, 6)
    * broker_fee : DECIMAL(15, 6)
    * amount : DECIMAL(15, 6)
    * deal_type : VARCHAR
    * created : BIGINT
    * modified : BIGINT
}

icon ||--|{ category
icon ||--|{ contact
icon ||--|{ account

currency |o--|{ account
exchange_security |o--|{ account

category ||--|{ account
category ||--|{ transaction

account ||--|{ transaction

transaction ||--|{ transaction

exchange_security ||--o{ exchange_security_split

investment_deal }o--|| account
investment_deal ||--o| currency
investment_deal ||--o| exchange_security

@enduml